# vibecode-spec-kit

./: .gitignore  AI_ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CONTEXT7_INTEGRATION.md  CONTEXT7_MCP_SETUP.md  CURSOR_INTEGRATION_ARCHITECTURE.md  CURSOR_SETUP_GUIDE.md  DOCKER_USAGE.md  FINAL_AI_ARCHITECTURE.md  LICENSE  N8N_AI_MODEL_RECOMMENDATIONS.md  N8N_INTEGRATION_REPORT.md  N8N_WORKFLOW_GUIDE.md  OLLAMA_MODELS.md  PRODUCTION_TESTING_PROTOCOL.md  RAG_INTEGRATION.md  RAG_INTEGRATION_REPORT.md  README.md  REBRAND_DOCUMENTATION.md  SUBSCRIPTION_INTEGRATION_GUIDE.md  SUPABASE_INTEGRATION_REPORT.md  TESTING_GUIDE.md  advanced-intelligent-workflow.json  advanced-three-tier-workflow.json  alertmanager.yml  alerts.yml  comparison-analysis.md  complete-workflow.json  create-n8n-workflow.json  docker-compose-rag-system.yml  docker-compose-supabase-complete.yml  docker-compose-supabase-simple.yml  env.example  env.rag-system.example  fix-workflow.json  http-credential.json  integration-test-results.json  intelligent-workflow.json  lightrag-credential.json  memory-bank-cli.py  (+33 more)
.cursor/: mcp-allowlist.json
.github/: copilot-instructions.md
.internal/: add-reflection-translations.py
REFERENCE/: RFC_COMPARATIVE_ANALYSIS.md  RFC_CURSOR_MEMORY_BANK_REFERENCE.md  RFC_VSCODE_MEMORY_BANK_IMPLEMENTATION.md
ai-router/: Dockerfile  (+1 more)
rag-proxy/: Cargo.toml  Dockerfile
rag-proxy/src/: cache.rs  config.rs  error.rs  main.rs  main_new.rs  main_old.rs  memory_bank.rs  rag.rs  types.rs
vscode-integration/rag-proxy/: Cargo.toml  Dockerfile
vscode-integration/rag-proxy/src/: main.rs
(+374 files in other folders)
