[package]
name = "rag-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Caching
lru = "0.12"
dashmap = "5.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# File system operations are included in tokio full features above

[dev-dependencies]
tokio-test = "0.4"
